<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/activity_home_screen"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="none"
    tools:context="com.moodtunes.moodtunes_v2.HomeScreenActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="@dimen/top_offset"
            android:id="@+id/lv_1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btn_scan"
                android:layout_gravity="center"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_sync_black_36dp"/>

            <TextView
                android:layout_gravity="center"
                android:layout_marginStart="45dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/header_text_size"
                android:text="@string/btn_scan_str"/>

            <RelativeLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/scan_tick"
                    android:visibility="invisible"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_done_black_24dp"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/top_offset"
            android:orientation="horizontal"
            android:id="@+id/lv_2"
            android:layout_below="@id/lv_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btn_metadata"
                android:layout_gravity="center"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_filter_list_black_36dp"/>

            <TextView
                android:layout_gravity="center"
                android:layout_marginStart="45dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/header_text_size"
                android:text="@string/btn_metadata_str"/>

            <RelativeLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/metadata_tick"
                    android:visibility="invisible"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_done_black_24dp"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv_3"
            android:layout_below="@id/lv_2"
            android:layout_marginTop="@dimen/top_offset"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btn_gracenote"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_cloud_upload_black_36dp"/>

            <TextView
                android:layout_gravity="center"
                android:layout_marginStart="45dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/header_text_size"
                android:textColor="@android:color/black"
                android:text="@string/btn_gracenote_str"/>

            <RelativeLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/gracenote_tick"
                    android:visibility="invisible"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_done_black_24dp"/>
            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/lv_4"
            android:layout_below="@id/lv_3"
            android:layout_marginTop="@dimen/top_offset"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/btn_db"
                android:background="@drawable/ic_sd_storage_black_36dp"
                />

            <TextView
                android:layout_gravity="center"
                android:layout_marginStart="45dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/header_text_size"
                android:textColor="@android:color/black"
                android:text="@string/btn_database_str"/>

            <RelativeLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/sqlite_tick"
                    android:visibility="invisible"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_done_black_24dp"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/lv_5"
            android:layout_below="@id/lv_4"
            android:layout_marginTop="@dimen/top_offset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/btn_camera"
                android:background="@drawable/ic_camera_alt_black_36dp"
                />

            <TextView
                android:layout_gravity="center"
                android:layout_marginStart="45dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/header_text_size"
                android:text="@string/btn_camera_str"/>

            <RelativeLayout
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/camera_tick"
                    android:visibility="invisible"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/ic_done_black_24dp"/>
            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>